Post implemented with recyclerview checkbox

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //Lifecycle components (JetpackCompose)
+    //Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     //Glide for images
